tests/invalid/runtime/math_sqrt_domain.pts
import Math;

function main() : void {
    Math.sqrt(-1.0);
}
